# url_shortener

./: .env-example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.sh
app/shortener/: function.py  routers.py  schemas.py
config/: __init__.py  database.py  settings.py  urls.py
